chore(index): replace the entire 'stream' module with only the required Readable class
Changed to shave of some kbytes from final bundle by not including the entire library

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/Joris-van-der-Wel/readable-blob-stream",
   "dependencies": {
+    "readable-stream": "^2.0.5",
     "inherits": "^2.0.1"
   },
   "devDependencies": {
